[project]
name = "webhook-examples"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiohttp==3.12.13",
    "cryptography==45.0.4",
]

[tool.uv]
dev-dependencies = [
    "mypy==1.17.0",
    "ruff==0.12.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # ruff defaults
    "E4",
    "E7",
    "E9",
    "F",

    "I",   # isort
    "PTH", # flake8-use-pathlib
]
