[project]
name = "webhook-examples"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiohttp==3.13.2",
    "cryptography==46.0.3",
]

[tool.uv]
dev-dependencies = [
    "mypy==1.18.2",
    "ruff==0.14.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # ruff defaults
    "E4",
    "E7",
    "E9",
    "F",

    "I",   # isort
    "PTH", # flake8-use-pathlib
]
